spec/support/fixtures/five_configs_in_two_security_groups.yml
---
sg-1:
  group_name: sg-1
  region: aaa
  description: sg 1
  protocol:
    tcp:
      80:
        CidrIp:
        - 0.0.0.0/0
      443:
        CidrIp:
        - 0.0.0.0/0
        GroupId:
        - sg-2
sg-2:
  group_name: sg-2
  region: bbb
  description: sg 2
  protocol:
    tcp:
      80:
        CidrIp:
        - 0.0.0.0/0
      443:
        CidrIp:
        - 0.0.0.0/0
